--- a/src/app/main/pages/andon/record/dialog/image-dialog/image-dialog.component.scss
+++ b/src/app/main/pages/andon/record/dialog/image-dialog/image-dialog.component.scss
@@ -8,9 +8,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 8px;
 
     &__image{
-        width: 300px;
-        height: 200px;
+        width: 100%;
+    }
+}
+
+.container-title {
+    display: flex;
+    align-items: stretch;
+
+    .icon {
+        align-self: center;
+        margin-right: 8px;
+    }
+
+    .title {
+        margin: 0px;
+        align-self: center;
     }
 }
