--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -75,3 +75,46 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #2b2b2b;
 }
+
+.placeholder-content {
+  height: 40px;
+  overflow: hidden;
+  background: #000;
+  position: relative;
+
+  // Animation
+  animation-duration: 1.7s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-name: placeholderAnimate;
+  background: #f6f7f8; // Fallback
+  background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+  background-size: 1300px; // Animation Area
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px lightgrey;
+}
+.placeholder-content_item {
+  width: 100%;
+  height: 20px;
+  position: absolute;
+  background: #fff;
+  z-index: 2;
+}
+
+.placeholder-content_item:after,
+.placeholder-content_item:before {
+  width: inherit;
+  height: inherit;
+  content: "";
+  position: absolute;
+}
+
+@keyframes placeholderAnimate {
+  0% {
+    background-position: -650px 0;
+  }
+  100% {
+    background-position: 650px 0;
+  }
+}
