--- a/src/app/main/pages/andon/dashboard/dashboard.component.html
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.html
@@ -14,14 +14,14 @@
             </mat-form-field>    
         </div>      
     </div>
-    <div class="body-container" *ngIf="andon$ | async">
+    <div class="body-container" >
         <div class="container1">
             <div class="container1__problem">
                 <h1 class="container1__problem--title" >
                     Reportes de tipo problema
                 </h1>
                 
-                <div class="charts">
+                <div class="charts" *ngIf="andon$ | async">
                     <div class="chartjs-container">
                         <canvas baseChart 
                             [datasets]="lineChartData" 
@@ -38,42 +38,23 @@
                 </div>
 
             </div>
-            <div class="container1__top">
+            <div class="container1__top" *ngIf="topDelay$ | async as delays">
                 <h1 class="container1__top--title1">
                     Top 10 mas demorados
-                </h1>
-                <table class="container1__top--table">
-                   <!--  <tr>
-                        <th>Firstname</th>
-                        <th>Lastname</th>
-                        <th>Age</th>
-                    </tr> -->
-                    <tr>
-                        <td>1</td>
-                        <td>OT CLILD</td>
-                        <td>12:34:01</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>OT CLILD</td>
-                        <td>12:34:01</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>OT CLILD</td>
-                        <td>12:34:01</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>OT CLILD</td>
-                        <td>12:34:01</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>OT CLILD</td>
-                        <td>12:34:01</td>
-                    </tr>
-                </table>
+                </h1> 
+                <div class="top-ten">
+                    <ul class="top-ten__list1">
+                        <li class="top-ten__list1--item" *ngFor="let item of delays.firts; let i = index">
+                        {{ i + 1 }} - {{ item.otChild }} - {{item.date}}
+                        </li>
+                    </ul> 
+                    <ul class="top-ten__list2">
+                        <li class="top-ten__list2--item" *ngFor="let item of delays.second; let i = index">
+                        {{ i + 6}} - {{ item.otChild }} - {{item.date}}
+                        </li>
+                    </ul> 
+                </div>               
+                              
             </div>
 
             <div class="container1__answer">
@@ -81,7 +62,7 @@
                     Promedio tiempo de respuesta
                 </h1>
                 
-                <div class="charts">
+                <div class="charts" *ngIf="andonAverageQuestions$ | async">
                     <div class="chartjs-container">
                         <canvas baseChart 
                             [datasets]="lineChartData2" 
@@ -106,15 +87,15 @@
                 <h1 class="container2__taller--title">
                     Reporte por taller
                 </h1>
-                <div class="container2__taller--cards"  > 
-                    <div class="container2__taller--cards-card" (click)="reports(item)" *ngFor="let item of groupByWorkShop">
+                <div class="container2__taller--cards" *ngIf="andonGroupBy$ | async as groupByWorkShop" > 
+                    <div class="container2__card" (click)="reports(item)" *ngFor="let item of groupByWorkShop">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p class="container2__taller--cards-name">
+                            <p class="container2__card--name">
                              {{item.workShop}}
                             </p>  
                         </div>
-                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">
+                        <h1 class="container2__card--quatity">
                             {{item.quantity}}
                         </h1>
                     </div>                    
