--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
@@ -133,6 +133,11 @@ progress::-webkit-progress-value {
             }
         }
     }
+
+    .dropzone {
+        width: 400px;
+        height: 300px;
+    }
     
   }
   
@@ -168,6 +173,12 @@ progress::-webkit-progress-value {
             border: none;
         }
     }
+
+    .dropzone {
+        width: 300px;
+        height: 200px;
+    }
+    
     
   }
 
