--- a/src/app/main/pages/andon/reports/dialogs/details-dialog/details-dialog.component.html
+++ b/src/app/main/pages/andon/reports/dialogs/details-dialog/details-dialog.component.html
@@ -26,9 +26,9 @@
         </div>
     </div>
 
-    <p><span style="font-weight: bold;">OT CLILD : </span> {{data.otChild}}</p>
+    <p><span style="font-weight: bold;">OT CHILD : </span> {{data.otChild}}</p>
     <p><span style="font-weight: bold;">Tipo de problema : </span> {{data.problemType}}</p>
-    <p><span style="font-weight: bold;">Descripcion : </span> {{data.description}}</p>
+    <p><span style="font-weight: bold;">Descripción : </span> {{data.description}}</p>
     <p><span style="font-weight: bold;">Fecha de reporte : </span> {{(data.reportDate['seconds'] *1000) |
         date:'dd/MM/yyyy - h:mm'}} </p>
     <p><span style="font-weight: bold;">Reportado por : </span>{{data.reportUser}}</p>
