--- a/src/app/main/pages/andon/dashboard/dashboard.component.html
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.html
@@ -111,7 +111,7 @@
                         <div class="title-card" >
                             <mat-icon mat-list-icon class="icon">domain</mat-icon>
                             <h3 class="title">
-                             {{item.workShop}}
+                             {{item.workShop | slice : 0:13}}
                             </h3>  
                         </div>
                         <h1 class="value-card">
