--- a/src/app/main/pages/andon/dashboard/dashboard.component.scss
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.scss
@@ -96,6 +96,7 @@
             column-gap: 1em;
             row-gap: 1em;
             grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+            padding: 8px 8px;
             border-radius: 30px 30px 0px 0px;
 
             &-card {
@@ -103,7 +104,7 @@
                 margin: 8px auto;
                 background: #f2c94c;
                 border-radius: 30px;
-                width: 170px;
+                width: 154px;
                 height: 170px;
                 cursor: pointer;
             }
@@ -183,6 +184,7 @@
                 column-gap: 0.7em;
                 row-gap: 0.7em;
                 grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+                padding: 8px 8px;
                 border-radius: 30px 30px 0px 0px;
 
                 &-card {
@@ -190,7 +192,7 @@
                     margin: 8px auto;
                     background: #f2c94c;
                     border-radius: 30px;
-                    width: 170px;
+                    width: 154px;
                     height: 170px;
                     cursor: pointer;
                 }
@@ -242,13 +244,14 @@
                 column-gap: 0.5em;
                 row-gap: 0.5em;
                 grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+                padding: 8px 8px;
                 border-radius: 30px 30px 0px 0px;
 
                 &-card {
                     box-shadow: 0px 0px 5.66077px 5.66077px rgba(177, 175, 175, 0.25);
                     margin: 8px auto;
                     background: #f2c94c;
-                    width: 170px;
+                    width: 154px;
                     border-radius: 30px;
                     height: 170px;
                     cursor: pointer;
