--- a/src/app/main/pages/andon/reports/reports.component.scss
+++ b/src/app/main/pages/andon/reports/reports.component.scss
@@ -53,7 +53,8 @@
     width: 130px;
     margin: 20px 0px;
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 10px;
+    border: 0.5px solid lightgray;
     box-shadow: 0px 0px 5.66077px 5.66077px rgba(177, 175, 175, 0.25); 
     
     &__header{
@@ -88,15 +89,15 @@
             background: rgba(98, 0, 238, 0.24);
             font-weight: bold;
             color: black;
-            border-radius: 10px;
-            padding: 10px 30px 10px 30px;
+            border-radius: 5px;
+            padding: 8px 30px 8px 30px;
             border: transparent;
-            margin-bottom: 15px;
+            margin-bottom: 12px;
         }
         &--return{
             background: #27AE60;
             color: white;
-            border-radius: 10px;
+            border-radius: 5px;
             padding: 0px 30px 0px 30px;
             border: transparent;
         }
