--- a/src/app/main/pages/andon/dashboard/dashboard.component.scss
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.scss
@@ -145,7 +145,7 @@
         &--quatity{
             font-weight: 700; 
             text-align: center; 
-            font-size: 7em; 
+            font-size: 4rem; 
             margin-top: 30px;
 
         }
