--- a/src/app/main/pages/andon/dashboard/dashboard.component.html
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.html
@@ -45,12 +45,15 @@
                 <div class="top-ten">
                     <ul class="top-ten__list1">
                         <li class="top-ten__list1--item" *ngFor="let item of delays.firts; let i = index">
-                        {{ i + 1 }} - {{ item.otChild }} - {{item.date}}
-                        </li>
-                    </ul> 
+                            <span style="width: 40px;"> {{ i + 1 }} </span> -
+                            <span style="width: 80px;" > {{ item.otChild }}</span> -
+                            <span style="width: 80px; font-weight: bold;" > {{item.date}} </span>
+                        </ul> 
                     <ul class="top-ten__list2">
                         <li class="top-ten__list2--item" *ngFor="let item of delays.second; let i = index">
-                        {{ i + 6}} - {{ item.otChild }} - {{item.date}}
+                            <span style="width: 40px;"> {{ i + 6 }} </span> -
+                            <span style="width: 80px;" > {{ item.otChild }}</span> -
+                            <span style="width: 80px; font-weight: bold;" > {{item.date}} </span>
                         </li>
                     </ul> 
                 </div>               
