--- a/src/app/main/pages/andon/dashboard/dashboard.component.scss
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.scss
@@ -77,7 +77,7 @@
     &__list1{
         list-style: none;
         &--item{
-            margin: 10px;
+            width: 200px;
             
         }
         
@@ -85,7 +85,7 @@
     &__list2{
         list-style: none;
         &--item{
-            margin: 10px;
+            width: 200px;
             
         }
 
