--- a/src/app/main/pages/andon/dashboard/dashboard.component.html
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="header-container">
         <div class="container-title">
             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">dashboard</mat-icon>
-            <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">DASHBOARD</h1>  
+            <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Dashboard</h1>  
         </div>
         <div class="container-date">
             <mat-form-field class="w3-margin-top w3-margin-bottom w3-block" style="max-width: 350px;" appearance="outline">
