--- a/src/app/main/pages/andon/record/dialog/image-dialog/image-dialog.component.html
+++ b/src/app/main/pages/andon/record/dialog/image-dialog/image-dialog.component.html
@@ -10,7 +10,7 @@
             <mat-icon style="color: gray;">close</mat-icon>
         </button>
     </div>
-    <mat-divider></mat-divider>
+    <mat-divider style="margin-top: 10px;"></mat-divider>
 </h2>
 <mat-dialog-content class="mat-typography" style="color: gray;">
     <ng-container *ngIf="images.length > 0; else default">
