--- a/src/app/main/pages/andon/record/record.component.html
+++ b/src/app/main/pages/andon/record/record.component.html
@@ -44,8 +44,10 @@
 
         <ng-container matColumnDef="reportDate">
           <th mat-header-cell *matHeaderCellDef class="table__cell theader">Fecha Reporte</th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{(element.reportDate.seconds * 1000) | date :
-            'dd/MM/yy hh:mm:ss'}} </td>
+          <td mat-cell *matCellDef="let element" class="table__cell"> 
+            {{(element.reportDate.seconds * 1000) | date : 'dd/MM/yy'}} 
+           <span style="color: #979797; font-size: 12px;"> {{(element.reportDate.seconds * 1000) | date : 'hh:mm:ss'}}  </span> 
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="workShop">
@@ -111,9 +113,10 @@
 
         <ng-container matColumnDef="workReturnDate">
           <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Fecha retorno Trabajo </th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workReturnDate ?
-            ((element.workReturnDate.seconds * 1000) | date :
-            'dd/MM/yy hh:mm:ss'): '---'}} </td>
+          <td mat-cell *matCellDef="let element" class="table__cell"> 
+            {{element.workReturnDate ?((element.workReturnDate.seconds * 1000) | date : 'dd/MM/yy'): '---'}} 
+            <span style="color: #979797; font-size: 12px;">   {{element.workReturnDate ?((element.workReturnDate.seconds * 1000) | date : 'hh:mm:ss'): '---'}}  </span>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="comments">
@@ -151,9 +154,10 @@
         <tr mat-header-row *matHeaderRowDef="historyDisplayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: historyDisplayedColumns;"></tr>
       </table>
-      <mat-paginator #historyPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
-      </mat-paginator>
     </div>
+    <mat-paginator #historyPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
+    </mat-paginator>
+
   </div>
 
   <div class="body-mobil">
@@ -173,8 +177,10 @@
 
         <ng-container matColumnDef="reportDate">
           <th mat-header-cell *matHeaderCellDef class="table__cell theader">Fecha Reporte</th>
-          <td mat-cell *matCellDef="let element" class="table__cell"> {{(element.reportDate.seconds * 1000) | date :
-            'dd/MM/yy hh:mm:ss'}} </td>
+          <td mat-cell *matCellDef="let element" class="table__cell"> 
+            {{(element.reportDate.seconds * 1000) | date : 'dd/MM/yy'}} 
+           <span style="color: #979797; font-size: 12px;"> {{(element.reportDate.seconds * 1000) | date : 'hh:mm:ss'}}  </span> 
+          </td> 
         </ng-container>
 
         <ng-container matColumnDef="name">
@@ -245,10 +251,10 @@
         <tr mat-header-row *matHeaderRowDef="historyMobilDisplayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: historyMobilDisplayedColumns;"></tr>
       </table>
-      <mat-paginator #historyMobilPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
-      </mat-paginator>
+     
     </div>
-
+    <mat-paginator #historyMobilPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
+    </mat-paginator>
   </div>
 
 
