--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
@@ -41,7 +41,8 @@
 .btn{
     margin-top: 30px;
     border: 1px solid #6200EE;
-    color: #6200EE;
+    color: white;
+    background: #6200EE;
     padding: 4px 40px 4px 40px;
 }
 .drop{
