--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -140,7 +140,8 @@
             <mat-nav-list>
               <div>
                 <a mat-list-item>
-                  <mat-icon mat-list-icon  class="mat-icon-menu">traffic</mat-icon> <!-- [routerLink]="['/main/andon']" -->
+                  <mat-icon mat-list-icon class="mat-icon-menu">traffic</mat-icon>
+                  <!-- [routerLink]="['/main/andon']" -->
                   <span class="mat-item-list-span">
                     AndOn
                   </span>
@@ -151,8 +152,8 @@
         </mat-expansion-panel-header>
         <mat-nav-list>
           <div>
-            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/report']"
-              routerLinkActive="active" (click)="drawer.toggle()">
+            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/report']" routerLinkActive="active"
+              (click)="drawer.toggle()">
               <mat-icon mat-list-icon class="mat-icon-menu">radio_button_checked</mat-icon>
               <span class="mat-item-list-span">
                 Reportar
@@ -162,7 +163,7 @@
               (click)="drawer.toggle()">
               <mat-icon mat-list-icon class="mat-icon-menu">dashboard</mat-icon>
               <span class="mat-item-list-span">
-                DashBoard
+                Dashboard
               </span>
             </a>
             <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/andon-record']"
@@ -186,7 +187,7 @@
 
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar class="main_toolbar" >
+    <mat-toolbar class="main_toolbar">
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
@@ -205,78 +206,3 @@
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-
-
-<!-- 
-  <div class="">
-    <mat-sidenav-container style="height:100vh;">
-      <mat-sidenav mode="over" #sideMenu [(opened)]="openedMenu" class="container-toolbar">
-        <div class="sidenav-menu">              
-          <div>
-            <div *ngIf="authService.currentUser() | async as user" class="user">
-              <div>
-                <img *ngIf="user.photoURL" [src]="user.photoURL"
-                class="user__image border--primary">
-                <h2 class="user__name">{{user.displayName}} </h2>
-                <h4 class="user__rol">Administrador</h4>
-              </div>
-            </div>
-            <mat-divider style="background: #F2C94C; margin-bottom: 10px;"></mat-divider>                  
-            <div class="menu">                                                    
-              <button mat-button class="menu__button" routerLink="/main" (click)="toggleSideMenu()">
-                <mat-icon class="menu__icon">bookmark</mat-icon>
-                Mejoras
-              </button>
-              <button mat-button class="menu__button" routerLink="/main" (click)="toggleSideMenu()">
-                <mat-icon class="menu__icon">verified</mat-icon>
-                Revisión de repuestos
-              </button>
-              <button mat-button class="menu__button" routerLink="/main" (click)="toggleSideMenu()">
-                <mat-icon class="menu__icon">settings</mat-icon>
-                      Configuración
-                    </button>
-                                       
-                  </div>
-            </div>
-          </div>
-        </mat-sidenav>
-
-        <mat-sidenav-content cdkScrollable>
-          <mat-toolbar class="main__toolbar">
-            <button
-                type="button"
-                aria-label="Toggle sidenav"
-                mat-icon-button
-                (click)="toggleSideMenu()"
-                >
-                <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-              </button>
-              <span>ingenieria-dsp</span>
-              
-              <button
-              type="button"
-              aria-label="Toggle sidenav"
-              mat-button
-                class="btn-exit-app"
-                (click)="exitApp()"
-                >
-                CERRAR SESION
-                <mat-icon aria-label="Side nav toggle icon">exit_to_app</mat-icon>
-              </button>
-              
-          </mat-toolbar>
-          <div class="main__space">
-            <router-outlet></router-outlet>
-          </div>
-        </mat-sidenav-content>
-        
-      </mat-sidenav-container>
-    </div>
-    
-    
-    
-    
-
-    
-  -->
