--- a/src/app/main/pages/andon/report/report.component.html
+++ b/src/app/main/pages/andon/report/report.component.html
@@ -39,7 +39,7 @@
                     <div class="placeholder-content">
                     </div>
                 </ng-template>
-                <button type="submit" style="background: transparent;" class="btn">
+                <button  mat-button type="submit" style="background: transparent;" class="btn">
                     <input type="checkbox" id="toggle">
                     <label for="toggle" id="boton" (click)="report()">
                     </label>
